--- a/inc/manifest.json
+++ b/inc/manifest.json
@@ -18,7 +18,7 @@
     {
       "src": "/img/logo.png",
       "type": "image/png",
-      "sizes": "apple-icon-144x144.png"
+      "sizes": "144x144"
     },
     {
       "src": "/img/logo.png",
