--- a/inc/manifest.json
+++ b/inc/manifest.json
@@ -6,22 +6,22 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/img/logo.png",
+      "src": "/img/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/img/logo.png",
+      "src": "/img/icon-512x512.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/img/logo.png",
+      "src": "/img/icon-512x512.png",
       "type": "image/png",
       "sizes": "360x360"
     },
     {
-      "src": "/img/logo.png",
+      "src": "/img/icon-512x512.png",
       "type": "image/png",
       "sizes": "1080x1080"
     }
