--- a/inc/manifest.json
+++ b/inc/manifest.json
@@ -1,30 +1,52 @@
 {
-  "short_name": "DLhut",
-  "name": "DLhut: Video Downloader",
-  "theme_color": "#4A90E2",
-  "background_color": "#1591ec",
-  "display": "standalone",
-  "icons": [
-    {
-      "src": "/img/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    },
-    {
-      "src": "/img/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "/img/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "360x360"
-    },
-    {
-      "src": "/img/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "1080x1080"
-    }
-  ],
-  "start_url": "/?utm_source=launcher"
-}
+    "short_name":"DLhut",
+    "name":"DLhut: Video Downloader",
+    "start_url":"/",
+    "display":"standalone",
+    "theme_color":"#007bff",
+    "background_color":"purple",
+    "icons": [
+      {
+       "src": "/img/logo.png",
+       "sizes": "36x36",
+       "type": "image/png",
+       "density": "0.75"
+      },
+      {
+       "src": "/img/logo.png",
+       "sizes": "48x48",
+       "type": "image/png",
+       "density": "1.0"
+      },
+      {
+       "src": "/img/logo.png",
+       "sizes": "72x72",
+       "type": "image/png",
+       "density": "1.5"
+      },
+      {
+       "src": "/img/logo.png",
+       "sizes": "96x96",
+       "type": "image/png",
+       "density": "2.0"
+      },
+      {
+       "src": "/img/logo.png",
+       "sizes": "144x144",
+       "type": "image/png",
+       "density": "3.0"
+      },
+      {
+       "src": "/img/logo.png",
+       "sizes": "192x192",
+       "type": "image/png",
+       "density": "4.0"
+      },
+      {
+        "src": "/img/logo.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "density": "4.0"
+       }
+     ]
+ }
